# nvtest

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  build.sh
src/: CMakeLists.txt  check_device.cu  common.cuh  deviceQuery.cpp  dot_product.cu  fwd.cuh  global_variable.cu  hello_world.cu  julia_set.cpp  julia_set.cu  main.cpp  nested_hello_world.cu  ray_tracing.cu  reduce_integer.cu  sum_matrix.cu  test.cu  test.cuh  test_cufft.cu  txi_gaussian.cu
